test/good/conversions/string2.px

n = -8251035946488047
print 0.toString() + n.toString()
