test/bad/basic/print01.px

print 1.toString(0)
